--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@ mmmm
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.4</version>
+                        <version>1.5</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -207,6 +207,24 @@ mmmm
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <!--Note: site URL repeated here to ensure correct deployment path-->
+    <distributionManagement>
+        <!--
+        The server id here defined must also appear in ~/.m2/settings.xml with username
+        -->
+        <repository>
+            <id>sourceforge-releases</id>
+            <name>Sourceforge Release Repository</name>
+            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>sourceforge-snapshots</id>
+            <name>Sourceforge Snapshot Repository</name>
+            <url>http://oss.sonatype.org/content/repositories/sourceforge-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 
 
 </project>
