--- a/cache-annotations-ri/cache-annotations-ri-common/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>cache-annotations-ri-common</artifactId>
