--- a/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
+++ b/cache-annotations-ri/cache-annotations-ri-cdi/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.jsr107.ri</groupId>
         <artifactId>cache-annotations-ri</artifactId>
         <version>1.1.2-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>cache-annotations-ri-cdi</artifactId>
